<resources>
    <string name="app_name">Byblos</string>
    <string name="login_description">Please login with your credentials or create a new account!</string>
    <string name="empty_string" />
    <string name="loginHint">Username or Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="createAccountLabel">New user? Create Account</string>
    <string name="bottom_border">Bottom Border</string>
    <string name="create_account_label">New Account</string>
    <string name="createAccountDescription">Enter a unique username or email, password and the user role to create a new account!</string>
    <string name="confirmCreateAccountButton">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="Welcome">Welcome</string>
    <string name="WelcomeAdmin">Welcome Administrator</string>
    <string name="usernamefield">usernameField</string>
    <string name="usernameText">usernameText</string>
    <string name="roleMessage">You are logged in as</string>
    <string name="createService">Create Service</string>
    <string name="editService">Edit Service</string>
    <string name="deleteService">Delete Service</string>
    <string name="movingString">Moving Assistance</string>
    <string name= "titleCreateServ">Start Service</string>
    <string name ="serviceN">Enter Name of the Service</string>
    <string name = "serviceR">Enter Rate of the Service</string>
    <string name = "fName">First Name of the Customer</string>
    <string name = "lName">Last Name of the Customer</string>
    <string name = "dBirth">Date of Birth of the Customer</string>
    <string name = "address">Address of the Customer</string>
    <string name = "email">Email of the Customer</string>
    <string name = "licenseT">Indicate the License Type</string>
    <string name = "pickupD">Pick up Date is required</string>
    <string name = "pickupT">Pick up Time is required</string>
    <string name = "returnD">Return Date is required</string>
    <string name = "returnT">Return Time is required</string>
    <string name = "maxKM">Maximum Number of Kilometers Traveled is required</string>
    <string name = "areaT">Area of Truck is required</string>
    <string name = "movingSt">Moving Start Location is required</string>
    <string name = "movingEn">Moving End Location is required</string>
    <string name = "nMovers">Number of Movers is required</string>
    <string name = "nBoxes">Number of Boxes is required</string>
    <string name="carT">Type of Car is required</string>
    <string name ="createBtn">Create Service</string>
    <string name="edSer">Edit</string>
    <string name="remSer">Delete</string>
</resources>