<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/asap_medium"
            android:gravity="center"
            android:textColor="#673AB7"
            android:text="@string/Welcome"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/asap_medium"
            android:gravity="center"
            android:textColor="#673AB7"
            android:textSize="70sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/roleMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/asap_medium"
            android:gravity="center"
            android:textColor="@color/grey_color"
            android:text="@string/roleMessage"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/grey_color"
            android:fontFamily="@font/asap_medium"
            android:gravity="center"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />





        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/bottom_border"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/bottom_border" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>