<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editServiceBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AdministratorPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/asap_medium"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textColor="#673AB7"
            android:textSize="80sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="Administrator"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <TextView
            android:id="@+id/txtSelectService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="What would you like to do?"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/createServiceBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/asap_medium"
                    android:gravity="center"
                    android:onClick="createServiceBtn"
                    android:text="@string/createService"
                    android:textSize="20sp"
                    app:cornerRadius="5dp" />

                <Button
                    android:id="@+id/editServiceBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/asap_medium"
                    android:gravity="center"
                    android:onClick="editServiceBtn"
                    android:text="@string/editService"
                    android:textSize="20sp"
                    app:cornerRadius="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/deletingService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/asap_medium"
                    android:gravity="center"
                    android:onClick="deletingService"
                    android:text="@string/deleteService"
                    android:textSize="20sp"
                    app:cornerRadius="5dp" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="92dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bottom_border"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/bottom_border" />

    </LinearLayout>
</LinearLayout>